fix: fix backface visibility not working for firefox

--- a/src/index.css
+++ b/src/index.css
@@ -23,15 +23,15 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari, Chrome */
-  -moz-backface-visibility: hidden;    /* Firefox */
-  -ms-backface-visibility: hidden;     /* Internet Explorer */
-  backface-visibility: hidden;         /* Standard */
+  backface-visibility: hidden; /* Standard */
   border-radius: 8px;
+  transform: rotateX(0deg); /* Front face remains in place */
 }
 
 .flip-card-back {
+  transform: rotateX(180deg); /* Back face rotated by 180 degrees */
   transform: rotateY(180deg);
+
 }
 
 input:focus, textarea:focus {
